# auth0-rs

./: Cargo.toml
src/: api.rs  error.rs  lib.rs
src/api/: http.rs  http_api.rs  signup.rs
