[package]
name = "auth0"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
isahc = "0.9.4"
serde = "1.0.106"
serde_json = "1.0.51"

[dev-dependencies]
async-std = { version = "1.6.1", features = ["attributes"] }
